<resources>
    <string name="app_name">Fridge App</string>
    <string name="add_item">Add Item</string>
    <string name="save_item">Save Item</string>
    <string name="item_name_hint">Item Name (e.g., Milk)</string>
    <string name="expiry_date_label">Expiry Date</string>
    <string name="remind_days_hint">Remind me (days before)</string>
    <string name="quantity_hint">Quantity</string>
    <string name="add_item_toolbar_icon_desc">Add a new item to the fridge</string>
    <string name="delete_item">Delete Item</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="fridge_empty">Your fridge is empty. Tap + to add an item.</string>
    <string name="add_new_item">Add new item</string>
    <string name="temp_num">(1)</string>
    <string name="item_name">Item Name</string>
    <string name="expires_yyyy_mm_dd">Expires: YYYY-MM-DD</string>
    <string name="_5_days">5 days</string>
    <string name="_1">1</string>
    <string name="one">1</string>
    <string name="your_fridge_items">Your Fridge Items</string>
    <string name="generate_recipes">Generate recipes</string>
    <string name="your_suggested_recipe">Your Suggested Recipe</string>
</resources>